# Sudoku

./: ReadMe.txt
Console App/: Sudoku.cpp  Sudoku.sln  Sudoku.vcxproj  Sudoku.vcxproj.filters  SudokuSolver.cpp  SudokuSolver.h  Typedefs.cpp  Typedefs.h  stdafx.h
Crook/: Sudoku.cpp  Sudoku.sln  Sudoku.vcxproj  Sudoku.vcxproj.filters  SudokuSamurai.cpp  SudokuSamurai.h  SudokuSolver.cpp  SudokuSolver.h  Typedefs.cpp  Typedefs.h  stdafx.h
Crook/Crook Paper/: Flow Chart.xlsx
Windows App/: CMakeLists.txt  Model.cpp  Model.h  ReadMe.txt  Sudoku.cbproj  Sudoku.cpp  Sudoku.res  SudokuHelper.cpp  SudokuHelper.h  SudokuPCH1.h  SudokuSolver.cpp  SudokuSolver.h  Typedefs.cpp  Typedefs.h  View.cpp  View.dfm  View.h  ViewModel.cpp  ViewModel.h
Windows App/Puzzles/: Easy.txt  Hard.txt  Master.txt  Medium.txt  Samurai.txt
